--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "antd": "^5.16.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
